--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="/src/main.jsx">
+    crossorigin = "anonymous"
+    src = "https://polyfill.io/v3/polyfill.min.js?features=fetch" 
+  </script>
 </body>
 
 </html>
